# nexus

./: .gitignore  README.md  demo_controller.py  patch_main.py  phase3_setup.py  render.yaml  setup_phase5_flexcell.py  setup_phase5_remaining.py
backend/: cobosense_main_patch.py  main.py  main.py.bak  requirements.txt
backend/core/: orchestrator.py  safety_post.py
backend/database/: __init__.py  crud.py  models.py  test_db.py
backend/modules/cobosense/: __init__.py  cobosense_router.py  cobosense_service.py  intent_lstm.py  pose_tracker.py  speed_controller.py  test_cobosense.py  test_webcam.py
backend/modules/cognitive_twin/: __init__.py  lstm_predictor.py  scheduler.py  state_mirror.py  test_lstm_predictor.py
backend/modules/embodied_gpt/: clip_encoder.py  navigation_executor.py  pipeline.py  safety_validator.py  test_capture.py  test_clip.py  vla_engine.py  (+1 more)
backend/ros2/: bridge.py
data/: nexus.db
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/hooks/: useMockData.ts  useWebSocket.ts
models/lstm_cobosense/: model.pt  scaler.pkl
notebooks/: 03_ppo_training.ipynb  04_lstm_twin.ipynb  05_lstm_cobosense.ipynb
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build
ros2_ws/src/nexus_robot/: CMakeLists.txt  package.xml
ros2_ws/src/nexus_robot/launch/: flexcell_launch.py  nexus_arena_launch.py
ros2_ws/src/nexus_robot/nexus_robot/: fleet_node.py  rl_policy_node.py
ros2_ws/src/nexus_robot/worlds/: flexcell_world.sdf  nexus_arena.sdf
(+328 files in other folders)
